fix: apply trag-bot suggestions for shutdown hook, path.of, and JavaDoc improvements